# GPM

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  spec.md
analysis/: Analysis_Report_16s.Rmd  Analysis_Report_BWGS.Rmd  Analysis_Report_ChIPseq.Rmd  Analysis_Report_DNAmArray.Rmd  Analysis_Report_MethylSeq.Rmd  Analysis_Report_RNAseq.Rmd  Analysis_Report_miRNAseq.Rmd  Analysis_Report_scATACseq.Rmd  Analysis_Report_scCITEseq.Rmd  Analysis_Report_scRNAcellplex.Rmd  Analysis_Report_scRNAseq.Rmd  Analysis_Report_scRNAseqcellplex.Rmd  Analysis_Report_scVDJseq.Rmd  references.bib  report_functions.R
analysis/Advance16s/: function16s.R
analysis/DEA_miRNA/: DEA_miRNA_constructor.Rmd  DEA_miRNA_functions.R  DEA_miRNA_template.Rmd
analysis/DEAmiRNA/: DEAmiRNA_constructor.R  DEAmiRNA_constructor.Rmd  DEAmiRNA_functions.R  DEAmiRNA_template.Rmd
analysis/DGEA/: DEA_miRNA_1.Rmd  DGEA_Geneset_Comparisons.Rmd  DGEA_RNAseq_functions.R  DGEA_all.Rmd  DGEA_all.qmd  DGEA_config.yml  DGEA_constructor.R  DGEA_constructor.Rmd  DGEA_correlation_analysis.Rmd  DGEA_functions.R  DGEA_integrated_heatmap.Rmd  DGEA_miRNAseq_functions.R  DGEA_template.Rmd  DGEA_template.qmd  SimpleComparison_template.Rmd  config.yml  contrasts.csv  pixi.toml  references.bib  rmd_report_extender.py  run_DGEA.sh  run_analysis.sh
analysis/DNAm_array/: 1_DNAmArray_QC.Rmd  2_DNAmArray_Processing.Rmd  3_DNAmArray_Differential_Analysis.Rmd  4_DNAmArray_FunctionalAnalysis_.Rmd  5_DNAmArray_Visualization.Rmd  (+1 more)
config/: analysis.config  environment.config  environment.ini  export.config  gpm.config  gpm.ini  htaccess  nextflow.config
demultiplex/: quick-16s_barcode_sequences.xlsx
gpm/: __init__.py  __version__.py  api_export.py  archive.py  clean.py  configs.py  exports.py  gpm.py  helper.py  install_hooks.py  main.py  messages.py  prebuild.py  project_ini_struc.py  reports.py  samplesheet.py  version.py
tests/: test_cli.py  test_export_engine.py  test_export_engine_websocket.py  test_gpm.sh
(+218 files in other folders)
